--- a/Dockerfile.ccl
+++ b/Dockerfile.ccl
@@ -7,8 +7,10 @@ ENV LISP=ccl
 WORKDIR /app
 COPY . .
 
+# Use latest ironclad from Github, until it gets into Quicklisp
 RUN mkdir -p ~/.config/common-lisp/source-registry.conf.d && \
     echo '(:tree "/app/")' >  ~/.config/common-lisp/source-registry.conf.d/workspace.conf && \
+    git clone https://github.com/sharplispers/ironclad.git && \
     /usr/local/bin/install-quicklisp
 
 ENTRYPOINT ["./scripts/run-tests.sh"]
